--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -2315,7 +2315,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" red="0.91764705879999997" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
-                                    <navigationItem title="Title" id="sw2-BU-QBZ">
+                                    <navigationItem title="Edit Caption" id="sw2-BU-QBZ">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="p1P-M8-oGr">
                                             <connections>
                                                 <action selector="cancelButtonAction:" destination="vsW-e5-l8t" id="Aht-6q-Xah"/>
